# dendra-arena

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  build.ps1  build_installer.ps1  environment.yml  livefreeze.spec  livefreeze_debug.spec  main.py  package-lock.json  package.json  pixi.toml  requirements.txt  run.ps1  run_click.bat  run_venv.ps1  run_venv_click.ps1  setup.ps1  shock.py
backend/: backend.spec  pyproject.toml
backend/arena_backend/: __init__.py  application.py  camera.py  experiment.py  main.py  protocols.py  schemas.py  setup_services.py  stimulator.py
backend/tests/: test_application.py  test_setup_backend.py
docs/: ARCHITECTURE.md  SHOCK_CONTROL.md
frontend/: index.html  vite.config.ts
installer/: livefreeze.iss
protocols/: 10s_1p2mA_single_shock.yml  3min_every20s_10s_0p9mA_3min.yml  3min_every20s_10s_0p9mA_total10min.yml  9min_180_240_300_360_420_4s_0p9mA.yml  9min_4_5_6_shock.yml  README.md  fear_conditioning.yml  fear_conditioning_intense.yml  freeze_shock_example.yml
scripts/: build-backend.ps1  extract_epoch_summary_log.py  roi_overlay.py
src/: __init__.py  app_icon.py  config_service.py  console_window.py  experiment_protocol.py  i18n.py  main_window.py  multi_camera_window.py  paths.py  rpibeh_adapter.py  shock_service.py  source_manager.py  video_capture_worker.py  video_controller.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: test_console_window.py  test_multi_camera_window.py  test_protocol_and_services.py
(+17 files in other folders)
