[project]
name = "arena-backend"
version = "1.0.0.dev1"
description = "Hardware and experiment runtime for arena"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "PyYAML>=6.0",
  "pyusb>=1.2",
  "libusb-package>=1.0.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
arena-backend = "arena_backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
