[package]
name = "arena"
version = "1.0.0-dev.1"
description = "arena experiment cockpit"
authors = ["arena contributors"]
edition = "2021"

[lib]
name = "arena_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rfd = "0.15"
